<resources>
    <string name="app_name">Lesson3.1</string>
    <string name="StartView">Комплексная система мониторинга здоровья</string>
    <string name="editTextName">ФИО</string>
    <string name="editTextAge">Возраст</string>
    <string name="buttonSave">Сохранить</string>
    <string name="buttonPressure">Давление</string>
    <string name="buttonHealth">Показатели здоровья</string>
    <string name="sys">Систолическое давление</string>
    <string name="dias">Диастолическое давление</string>
    <string name="puls">Пульс</string>
    <string name="tah">Тахикардия</string>
    <string name="weight">Вес</string>
    <string name="steps">Количество шагов</string>
</resources>